feat: 调整了项目目录结构，拆分Modal，引入uid

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.2.6",
     "lodash": "^4.17.21",
     "react-transition-group": "^4.4.1",
+    "uid": "^2.0.0",
     "umi": "^3.4.2",
     "umi-plugin-tailwindcss": "^3.0.3"
   },
